<resources>
    <string name="app_name">Budget Manager</string>
    <string name="ekle">EKLE</string>
    <string name="tl">TL</string>
    <string name="sterlin">STERLIN</string>
    <string name="euro">EURO</string>
    <string name="dolar">DOLAR</string>
    <string name="s_tl">TL</string>
    <string name="s_sterlin">Sterlin</string>
    <string name="s_euro">Euro</string>
    <string name="s_dolar">Dolar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_expense">Harcama Ekle</string>
    <string name="expense_description">Açıklama</string>
    <string name="expense_cost">Harcama</string>
    <string name="bill">Fatura</string>
    <string name="shopping">Alışveriş</string>
    <string name="other">Diğer</string>
    <string name="change_name">İsim Değiştir</string>
    <string name="input_name">İsim Giriniz</string>
    <string name="male">Erkek</string>
    <string name="female">Kadın</string>
    <string name="dont_want_to_indicate">Belirtmek İstemiyorum</string>
    <string name="save">Kaydet</string>
    <string name="delete">SİL</string>
    <string name="total_expense">Harcamanız</string>
    <string name="hello">Merhaba</string>
    <string name="onboarding_first_title">Bütçeni Yönet</string>
    <string name="onboarding_first_text">Harcamalarını takip et.</string>
    <string name="gec">Geç</string>
    <string name="onboarding_second_title">Farklı Para Birimleriyle Takip Et</string>
    <string name="onboarding_second_text">Harcamalarınızı TL, Dolar, Euro ve Sterlin olmak üzere sürekli güncellenen kurlarla birlikte takip edin.</string>
    <string name="onboarding_third_title">Kolayca Kategorilendir</string>
    <string name="onboarding_third_text">Harcamalarınız kategorilendirerek daha kolay takip edin.</string>
    <string name="bitir">Bitir</string>
</resources>