<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="frAddExpenseViewModel"
            type="com.ozerol.budgetmanager.addexpense.FRAddExpenseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cream_0"
        tools:context=".addexpense.FRAddExpense">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/add_expense"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="36dp"
            app:boxCornerRadiusBottomEnd="28dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopEnd="28dp"
            app:boxCornerRadiusTopStart="28dp"
            app:boxStrokeColor="@color/primary_pink"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/primary_pink"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expense_description"
                android:maxLength="40" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_cost"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            app:boxCornerRadiusBottomEnd="28dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopEnd="28dp"
            app:boxCornerRadiusTopStart="28dp"
            app:boxStrokeColor="@color/primary_pink"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/primary_pink"
            app:layout_constraintTop_toBottomOf="@+id/til_description">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expense_cost"
                android:maxLength="40" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/expenseType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="@+id/til_cost"
            app:layout_constraintTop_toBottomOf="@+id/til_cost">

            <RadioButton
                android:id="@+id/rbBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bill" />

            <RadioButton
                android:id="@+id/rbShopping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shopping" />

            <RadioButton
                android:id="@+id/rbOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/expenseCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="48dp"
            android:layout_marginTop="36dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/expenseType"
            app:layout_constraintTop_toBottomOf="@+id/expenseType">

            <RadioButton
                android:id="@+id/rbTl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/s_tl" />

            <RadioButton
                android:id="@+id/rbDl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/s_dolar" />

            <RadioButton
                android:id="@+id/rbEu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/s_euro" />

            <RadioButton
                android:id="@+id/rbSt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/s_sterlin" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_add"
            android:text="@string/ekle"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/expenseCurrency"
            app:layout_constraintTop_toBottomOf="@+id/expenseCurrency" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>