<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profile"
            type="com.ozerol.budgetmanager.database.Profile" />

        <variable
            name="expense"
            type="com.ozerol.budgetmanager.database.Expense" />

        <variable
            name="frHomeViewModel"
            type="com.ozerol.budgetmanager.home.FRHomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_screen"
        tools:context=".home.FRHome">


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_header"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="12dp"
            android:elevation="4dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_cv_header"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_profile_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="36dp"
                    android:drawableStart="@drawable/ic_profile"
                    android:drawablePadding="6dp"
                    android:onClick="@{()-> frHomeViewModel.clickProfile()}"
                    android:text="@string/hello"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_profile"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="12dp"
                    android:maxLines="3"
                    android:onClick="@{()-> frHomeViewModel.clickProfile()}"
                    android:singleLine="false"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_total_expense_text"
                    app:layout_constraintStart_toStartOf="@+id/tv_profile_text"
                    app:layout_constraintTop_toBottomOf="@+id/tv_profile_text"
                    app:tvName="@{frHomeViewModel.lastProfile}"
                    tools:ignore="TextViewEdits" />

                <TextView
                    android:id="@+id/tv_total_expense_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="48dp"
                    android:text="@string/total_expense"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_profile_text" />

                <TextView
                    android:id="@+id/tv_total_expense"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="4dp"
                    android:text="Yoktur"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_total_expense_text"
                    app:layout_constraintTop_toBottomOf="@+id/tv_total_expense_text"
                    app:tvTotalExpense="@{frHomeViewModel.totalExpense}" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <RadioGroup
            android:id="@+id/rgCurrencies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:checkedButton="@={frHomeViewModel.selectCurrencyButton}"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/cv_header">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/btnTl"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_currency_selector"
                android:button="@android:color/transparent"
                android:elevation="2dp"
                android:gravity="center"
                android:text="@string/tl"
                android:textColor="@drawable/text_color_currency_selector"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/btnSt"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_currency_selector"
                android:button="@android:color/transparent"
                android:elevation="2dp"
                android:gravity="center"
                android:text="@string/sterlin"
                android:textColor="@drawable/text_color_currency_selector"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/btnEu"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_currency_selector"
                android:button="@android:color/transparent"
                android:elevation="2dp"
                android:gravity="center"
                android:text="@string/euro"
                android:textColor="@drawable/text_color_currency_selector"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/btnDl"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_currency_selector"
                android:button="@android:color/transparent"
                android:elevation="2dp"
                android:gravity="center"
                android:text="@string/dolar"
                android:textColor="@drawable/text_color_currency_selector"
                android:textSize="13sp" />

        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_expenses"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:paddingBottom="80dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgCurrencies" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:backgroundTint="@color/primary_pink"
            android:onClick="@{()->frHomeViewModel.clickAddExpense()}"
            android:text="@string/ekle"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:theme="@style/Theme.MyMaterialTheme"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>